// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect Custom Icons should \`treeIcon\` work 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-single m-design-select-show-arrow m-design-select-open"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="m-design-select-dropdown m-design-tree-select-dropdown m-design-slide-up-appear m-design-slide-up-appear-prepare m-design-slide-up"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div>
          <div
            class="m-design-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="m-design-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="m-design-select-tree-indent"
              >
                <div
                  class="m-design-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="m-design-select-tree-list"
              style="position: relative;"
            >
              <div
                class="m-design-select-tree-list-holder"
                style="max-height: 256px; overflow-y: auto;"
              >
                <div>
                  <div
                    class="m-design-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-grabbed="false"
                      class="m-design-select-tree-treenode m-design-select-tree-treenode-switcher-close m-design-select-tree-treenode-leaf-last"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="m-design-select-tree-indent"
                      />
                      <span
                        class="m-design-select-tree-switcher m-design-select-tree-switcher-noop"
                      />
                      <span
                        class="m-design-select-tree-node-content-wrapper m-design-select-tree-node-content-wrapper-normal"
                        title="parent 1"
                      >
                        <span
                          class="m-design-select-tree-iconEle m-design-select-tree-icon__customize"
                        >
                          <span>
                            Bamboo
                          </span>
                        </span>
                        <span
                          class="m-design-select-tree-title"
                        >
                          parent 1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="anticon m-design-select-suffix m-design-select-arrow-open mui-down-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 12"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(-97.000000, -455.000000)"
          >
            <g
              transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
            >
              <path
                d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                fill="currentColor"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</div>
`;

exports[`TreeSelect TreeSelect Custom Icons should support customized icons 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-multiple m-design-select-allow-clear m-design-select-show-search"
>
  <div
    class="m-design-select-selector"
  >
    <div
      class="m-design-select-selection-overflow"
    >
      <div
        class="m-design-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="m-design-select-selection-item"
          title="my leaf"
        >
          <span
            class="m-design-select-selection-item-content"
          >
            my leaf
          </span>
          <span
            aria-hidden="true"
            class="m-design-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="m-design-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="m-design-select-selection-item"
          title="your leaf"
        >
          <span
            class="m-design-select-selection-item-content"
          >
            your leaf
          </span>
          <span
            aria-hidden="true"
            class="m-design-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="m-design-select-selection-overflow-item m-design-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="m-design-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="m-design-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="m-design-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span>
      clear
    </span>
  </span>
</div>
`;

exports[`TreeSelect rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="m-design-select m-design-tree-select m-design-select-rtl m-design-select-single m-design-select-show-arrow"
>
  <div
    class="m-design-select-selector"
  >
    <span
      class="m-design-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="m-design-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="m-design-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="m-design-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="anticon m-design-select-suffix mui-down-icon"
      role="img"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 12"
        width="1em"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            transform="translate(-97.000000, -455.000000)"
          >
            <g
              transform="translate(103.000000, 461.000000) scale(1, -1) rotate(180.000000) translate(-103.000000, -461.000000) translate(97.000000, 455.000000)"
            >
              <path
                d="M3.0661242,4.03910083 C3.26138577,3.84383826 3.57796363,3.84383836 3.77323354,4.03910083 L5.95336258,6.21924339 L8.07100164,4.10160081 C8.26626155,3.90633845 8.58285141,3.90633825 8.77811133,4.10160081 L9.13166117,4.45515374 C9.32693108,4.6504157 9.32693108,4.96699364 9.13166117,5.1622636 L6.30324242,7.99068303 C6.10797251,8.185953 5.79139265,8.185953 5.59613273,7.99068303 L5.24258289,7.63713311 C5.2251829,7.61974311 5.20934291,7.60138311 5.19504291,7.58223312 L2.71257101,5.09976361 C2.5173086,4.90449365 2.5173086,4.58791572 2.71257101,4.39265394 L3.0661242,4.03910083 Z"
                fill="currentColor"
              />
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</div>
`;
